Thomas Galvin for contributing to this release.

{{{ Miscellaneous

- Added "Create Constructor" macro, updated "Make Get and Set Methods"
  and "Get Class Name" macros (Thomas Galvin).

- Updated Pascal syntax highlighting (Barry Carr).

- It is now possible to customize the metal look and feel fonts under
  JDK 1.5.

- Updated ActionScript syntax highlighting (Nahuel Foronda).

}}}
{{{ Bug Fixes

- Fixed another NullPointerException in the file system browser when
  using VFS's that do not set the VFS.DirectoryEntry.symlinkPath field.

- Actually fix the MacOS plugin for the latest MRJ update.

- Fix status bar problem with GTK look and feel if memory indicator is
  enabled.

- Fixed exception with auto indent (Brad Mace).

- jEdit didn't compile with Sun's JDK 1.5 beta (Trevor Harmon).

- "Find Next" didn't work with directory searches where the paths
  contained symbolic links.

- Fixed highlighting of verbatim environments in LaTeX files.

- Fixed ArrayIndexOutOfBoundsException when invoking "Expand Fold"
  outside of a narrowed range.

- Fixed problem where any dialogs boxes shown by the search and replace
  code would force the search and replace dialog to be shown on OS X.

}}}
{{{ API Changes

- Added "optional dependencies". An optional dependency looks like this:

  plugin.MyPlugin.depend.0=optional plugin AnotherPlugin 1.3.1

  An optional dependency is ignored; if AnotherPlugin does not exist,
  MyPlugin will still load. However, if AnotherPlugin is unloaded while
  jEdit is running, all plugins that depend on it, even ones with
  optional dependencies, will be reloaded.

  If your plugin does a runtime check for the existence of another
  plugin, and uses its services if it exists, then you *MUST* add an
  optional dependency on that plugin, otherwise reloading plugins will
  leave stale classes in the active class loader.

}}}

}}}

{{{ Version 4.2pre9

Thanks to Brad Mace, David Hardin,  Matthew J. Price, Ollie Rutherfurd,