@@ -3,9 +3,7 @@
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
-- splash colors off
 - VFS browser pathsEqual(): case sensitivity!
-- fix revalidate OS X
 - first line problem solved by reset()
 - latest sftp: permissions not saved!
 - DnD still dosn't work as expected when draging from the same buffer,
